base/kube-prometheus-stack/templates/alertmanager/ingress.yaml
---
# Source: kube-prometheus-stack/templates/alertmanager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-kube-prometheus-alertmanager
  namespace: monitoring
  labels:
    app: kube-prometheus-stack-alertmanager
    
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/version: "20.0.1"
    app.kubernetes.io/part-of: kube-prometheus-stack
    chart: kube-prometheus-stack-20.0.1
    release: "prometheus"
    heritage: "Helm"
spec:
  ingressClassName: internal
  rules:
    - host: alertmanager.FIXME
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus-kube-prometheus-alertmanager
                port:
                  number: 9093
